[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/temp/grey_box.png" type="Texture" id=1]
[ext_resource path="res://scenes/characters/enemies/Smallies.gd" type="Script" id=2]
[ext_resource path="res://scenes/characters/enemies/SmalliesState.gd" type="Script" id=3]
[ext_resource path="res://scenes/characters/enemies/EnemyHurtbox.gd" type="Script" id=4]
[ext_resource path="res://scenes/characters/enemies/WanderController.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 5 )

[sub_resource type="CircleShape2D" id=3]
radius = 80.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 10 )

[node name="Smallies" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 100.0

[node name="SmalliestState" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.878431, 0.427451, 0.427451, 1 )
position = Vector2( 0, -10 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectionBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionBox"]
shape = SubResource( 3 )

[node name="EnemyHurtbox" type="Area2D" parent="." groups=["hittable"]]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHurtbox"]
position = Vector2( 0, -5 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="WanderController" parent="." instance=ExtResource( 5 )]
wander_range = 64

[connection signal="body_entered" from="DetectionBox" to="." method="_on_DetectionBox_body_entered"]
[connection signal="hit" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_hit"]
